script génération de données

--- a/src/app/default-user-profile/default-user-profile.component.html
+++ b/src/app/default-user-profile/default-user-profile.component.html
@@ -1,4 +1,4 @@
-<div class="middle-sidebar-bottom">
+<div class="middle-sidebar-bottom" style="height:500px; overflow-y:scroll;">
         <div class="middle-sidebar-left">
             <div class="card d-block w-100 border-0 shadow-xss rounded-lg overflow-hidden mb-3" style="background-image: url(https://via.placeholder.com/200x100.png);">
                 <div class="card-body p-lg-5 p-4 bg-black-08">
