--- a/src/app/header-search/header-search.component.html
+++ b/src/app/header-search/header-search.component.html
@@ -3,7 +3,7 @@
         <div class="form-group searchbox mb-0 border-0 p-1">
             <input type="text" class="form-control border-0" placeholder="Search...">
             <i class="input-icon">
-                <ion-icon name="search-outline" role="img" class="md hydrated" aria-label="search outline"></ion-icon>
+                <!--<ion-icon name="search-outline" role="img" class="md hydrated" aria-label="search outline"></ion-icon>-->
             </i>
             <a href="#" class="ml-1 mt-1 d-inline-block close searchbox-close">
                 <i class="ti-close font-xs"></i>
